fix import statement for carousel, aligns dots right

--- a/resources/assets/styles/components/_carousel.scss
+++ b/resources/assets/styles/components/_carousel.scss
@@ -4,3 +4,7 @@
 		line-height: 2em;
 	}
 }
+
+.n2-ss-control-bullet {
+	 justify-content: flex-end !important;
+ }
